actually fix mobile clipping?

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   margin: 0;
   height: 100%;
-  overflow-y: hidden;
+  overflow-y: scroll;
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
